# sir-pinn

./: .envrc  .gitignore  LICENSE  README.md  TODO.md  devbox.json  env.yaml  environment.yaml  pyproject.toml
data/studies/activation/: v25_relu.ckpt  v27_relu.ckpt  v28_sigmoid.ckpt  v31_softplus.ckpt  v33_softplus.ckpt
data/studies/architecture/: v36_arch_l2_n16.ckpt  v38_arch_l2_n32.ckpt  v40_arch_l2_n50.ckpt  v48_arch_l3_n16.ckpt  v53_arch_l3_n50.ckpt  v56_arch_l3_n64.ckpt  v57_arch_l3_n64.ckpt  v58_arch_l4_n16.ckpt  (+4 more)
data/versions/: v106_batch_512_l5_n64.ckpt  v108_batch_512_l5_n64.ckpt  v12_smma_w100.ckpt  v14_early_stopping_p25.ckpt  v17_early_stopping_p50.ckpt  v22_early_stopping_p75.ckpt  v22_square.ckpt  v23_square.ckpt  v2_smma_w25.ckpt  v32_softplus.ckpt  v39_arch_l2_n32.ckpt  v3_smma_w25.ckpt  v43_arch_l2_n64.ckpt  v44_arch_l2_n64.ckpt  v45_arch_l2_n64.ckpt  v50_arch_l3_n32.ckpt  v52_arch_l3_n50.ckpt  v60_arch_l4_n16.ckpt  v61_arch_l4_n32.ckpt  v62_arch_l4_n32.ckpt  v64_arch_l4_n50.ckpt  v73_arch_l5_n32.ckpt  v74_arch_l5_n32.ckpt  v76_arch_l5_n50.ckpt  v77_arch_l5_n50.ckpt  v78_arch_l5_n50.ckpt  v79_arch_l5_n64.ckpt  v80_arch_l5_n64.ckpt  v85_batch_100_l5_n16.ckpt  v86_batch_100_l5_n16.ckpt  v89_batch_100_l5_n64.ckpt  v90_batch_100_l5_n64.ckpt  v99_batch_256_l5_n64.ckpt  v9_smma_w75.ckpt
docs/: code_style.xml
figures/: 1_early_stopping_comparison.json  2_smma_comparison.json  2_smma_comparison.md  3_activation_comparison.json  3_activation_comparison.md  4_architecture_comparison.json  4_architecture_comparison.md  5_l4n50_batch_size_comparison.json  5_l4n50_batch_size_comparison.md  5_l5n64_batch_size_comparison.json  5_l5n64_batch_size_comparison.md  smma_comparison.json
src/: .env  ablation_study.py  joint.ipynb  plot_metrics.py  sir.ipynb  sir_pinn.py  split.ipynb
src/constant_rate/: constant_rate.ipynb  constant_rate.py  constant_rate_v2.ipynb  sir_pinn.py
src/constant_rate_joint/: constant_rate_joint.ipynb
src/old/: sir_pinn_old.py
src/pinn/: ablation_study.py  plot_metrics.py  sir_pinn.py
src/test/: beta_history.csv  loss_history.csv  test.ipynb
src/versions/: v24_square.ckpt  v26_relu.ckpt  v29_sigmoid.ckpt  v30_sigmoid.ckpt  v34_arch_l2_n16.ckpt  v41_arch_l2_n50.ckpt  v42_arch_l2_n50.ckpt  v47_arch_l3_n16.ckpt  v54_arch_l3_n50.ckpt  v5_smma_w50.ckpt  v65_arch_l4_n50.ckpt  v66_arch_l4_n50.ckpt  v67_arch_l4_n64.ckpt  v70_arch_l5_n16.ckpt  v71_arch_l5_n16.ckpt  v82_batch_100_l4_n50.ckpt  v87_batch_100_l5_n16.ckpt  v88_batch_100_l5_n64.ckpt  v92_batch_256_l4_n50.ckpt  v95_batch_256_l5_n16.ckpt  v98_batch_256_l5_n64.ckpt  version_10.ckpt  version_15.ckpt  version_16.ckpt  version_17.ckpt  version_18.ckpt  version_2.ckpt  version_3.ckpt  version_5.ckpt  version_7.ckpt  version_8.ckpt  version_9.ckpt
(+460 files in other folders)
